--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -51,3 +51,41 @@ html{
         opacity: 1;
     }
 }
+
+@keyframes Submenu{
+    from{
+        opacity: 0;
+        transform: translateY(50%);
+    }
+    to{
+        opacity: 1;
+        transform: translateY(0);
+    }
+}
+
+/* modal layout */
+.modal{
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    display: flex;
+    animation: fadeIn linear .1s;
+}
+
+.modal__overlay{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0,0,0,.4);
+}
+
+.modal__body{
+    --grow-from: .7;
+    --grow-to: 1;
+    margin: auto;
+    position: relative;
+    z-index: 1;
+    animation: grows linear .1s;
+}
