--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -87,3 +87,262 @@
 .language-link:hover{
     background-color: rgba(0, 0, 0, 0.03);
 }
+
+/* header css */
+
+header{
+    position: fixed;
+    top: 40px;
+    left: 0;
+    right: 0;
+    width: 100%;
+    display: flex;
+    padding: 0 30px;
+    height: 90px;
+    align-items: center;
+    justify-content: space-between;
+    transition: all linear 0.3s;
+    z-index: 10;
+}
+
+header.sticky{
+    background-color: var(--white-color);
+    box-shadow: rgba(149, 157, 165, .2) 0px 8px 24px;
+    top:0;
+}
+
+header:hover{  
+    background-color: var(--white-color);
+    box-shadow: rgba(149, 157, 165, .2) 0px 8px 24px;
+}
+
+.header-left,
+.header-right{
+    flex: 1;
+    display: flex;
+    align-items: center;
+}
+
+.header-right{
+    justify-content: flex-end;
+}
+
+.header-menu{
+    outline: none;
+    border: none;
+    cursor: pointer;
+    background-color: transparent;
+}
+
+.header-icon{
+ font-size: 24px;
+}
+
+.header-left-navigation{
+    height: 100%;
+}
+
+.header-navigation-list{
+    list-style: none;
+    display: flex;
+    align-items: center;
+}
+
+.header-navigation-item{
+    margin-left: 24px;
+}
+
+.header-navigation-link{
+    text-decoration: none;
+    padding: 8px 0;
+    color: var(--text-color);
+    font-size: 14px;
+    position: relative;
+}
+
+.header-navigation-link::after{
+    content: "";
+    position: absolute;
+    top: 100%;
+    left: 0;
+    height: 1px;
+    width: 0;
+    background-color: var(--text-color);
+    transition: all ease-in-out .3s;
+}
+
+.header-navigation-item--active,
+.header-navigation-link::after,
+.header-navigation-link:hover::after
+{
+    content: "";
+    position: absolute;
+    top: 100%;
+    left: 0;
+    height: 2px;
+    width: 100%;
+    background-color: var(--text-color);
+}
+
+.header-logo{
+    height: 100%;
+}
+
+.header-logo-link{
+    height: 100%;
+    display: flex;
+    align-items: center;
+}
+
+.header-logo-link img{
+    max-height: 24px;
+    object-fit: cover;
+}
+
+.header-navigation-item:hover .header-sub-menu{
+    display: flex;
+    background-color: var(--white-color);
+}
+
+
+/* header sub */
+
+.header-sub{
+
+}
+
+.header-sub-menu{
+    position: absolute;
+    top: 100%;
+    width: 100%;
+    left: 0;
+    background-color: var(--white-color);
+    padding: 60px 60px 40px;
+    display: none;
+    border: 1px solid var(--border-color);
+    z-index: 3;
+}
+
+.header-sub-menu::after{
+    content: "";
+    position: absolute;
+    top: -30px;
+    left: 0;
+    width: 100%;
+    height: 30px;
+    background-color: transparent;
+    z-index: 4;
+}
+
+.header-sub-item{
+    list-style: none;
+    max-width: 20%;
+    width: 100%;
+}
+
+.header-sub-title{
+    font-size: 16px;
+    font-weight: 400;
+    text-transform: uppercase;
+}
+
+.header-sub-link{
+
+}
+
+.sub-menu{
+    margin-top: 20px;
+}
+
+.sub-item{
+    list-style: none;
+    animation: Submenu linear .3s;
+}
+
+.sub-link{
+    display: inline-block;
+    text-decoration: none;
+    position: relative;
+    padding: 10px 0;
+    font-size: 15px;
+    color: var(--text-color);
+}
+.sub-link::after{
+    content: "";
+    position: absolute;
+    top: 100%;
+    left: 0;
+    height: 2px;
+    width: 0;
+    background-color: var(--text-color);
+    transition: all ease-in-out .3s;
+}
+.sub-link:hover::after{
+    width: 100%
+};
+.sub-link--label{
+    position: relative;
+    background-color: #282828;
+    color:var(--white-color);
+    padding: 3px;
+    font-size: 10px;
+    top: -3px;
+    border-radius: 4px;
+}
+
+.sub-link--label.demo{
+    background-color: #b9a16b;
+}
+.sub-link-img{
+    width: 100%;
+    object-fit: cover;
+    margin-bottom: 10px;
+}
+
+
+.header-right-navigation{
+
+}
+
+
+/* slider css */
+
+.slider{
+    width: 100%;
+    max-height: 650px;
+}
+.slider-item{
+   object-fit: cover; 
+   height: 650px;
+}
+.slider .owl-dots {
+    position: relative;
+    bottom: 20px;
+    left: 30px;
+}
+
+/* section banner css */
+
+.section-banner{
+    padding: 50px 0 30px;
+    position: relative;
+}
+.section-banner-item{
+    overflow: hidden;
+}
+.section-banner-img{
+    transform: scale(1);
+    transition: all .3s linear;
+}
+.section-banner-item:hover .section-banner-img{
+    transform: scale(1.2);
+}
+.section-banner::after{
+    position: absolute;
+    content: "";
+    bottom: 0;
+    height: .4px;
+    left: 0;
+    width: 100%;
+    background-color: var(--border-color);
+}
